--- a/minishellmake/Makefile
+++ b/minishellmake/Makefile
@@ -6,26 +6,31 @@
 #    By: sdarci <sdarci@student.21-school.ru>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/12/03 16:09:07 by mkoch             #+#    #+#              #
-#    Updated: 2022/06/14 18:13:56 by sdarci           ###   ########.fr        #
+#    Updated: 2022/06/19 15:09:11 by sdarci           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = minishell
 
-SRCS =	main.c cd.c echo.c utils.c ft_export.c buildins.c exit.c execute_simple.c \
-			redirect_out.c parsing/parsing.c \
+LIBDIR = /Users/sdarci/Downloads/minishellmake/parsing/LIBFT
+
+SRCS =	main.c pipe.c cd.c echo.c utils.c buildins.c exit.c execute_simple.c parsing/quots.c\
+			redirect_out.c parsing/parsing.c parsing/cmd.c parsing/redirs.c parsing/shell_split.c parsing/ft_exp.c\
 			parsing/change_env.c parsing/lists_func.c parsing/LIBFT/ft_split.c \
 			parsing/LIBFT/ft_strdup.c parsing/LIBFT/ft_strjoin.c parsing/LIBFT/ft_strncmp.c \
 			parsing/LIBFT/ft_strtrim.c  parsing/LIBFT/ft_memcpy.c \
-			parsing/LIBFT/ft_strchr.c parsing/LIBFT/ft_strcmp.c
-
+			parsing/LIBFT/ft_strchr.c parsing/LIBFT/ft_strcmp.c parsing/LIBFT/ft_putstr_fd.c \
+			signalss.c parsing/LIBFT/ft_putchar_fd.c
+			
+			
 HEADER = minishell.h
 
 FT_DIR = parsing/LIBFT
 
 OBJS = $(SRCS:%.c=%.o)
 
-CFLAGS = -g -fsanitize=address
+CFLAGS =  -fsanitize=address -g
+
 RM = rm -f
 
 all: $(NAME)
